Fix/#810 cost summary spacing (#811)
* Update offer template cost summary

* Introduce column gap for cost items

* Update CHANGELOG.rst

--- a/offer-manager-app/src/main/resources/offer-template/stylesheet.css
+++ b/offer-manager-app/src/main/resources/offer-template/stylesheet.css
@@ -140,6 +140,8 @@ thead#page-header {
 .cost-summary .cost-item {
     display: grid;
     grid-template-columns: auto auto;
+    column-gap: 1mm;
+    grid-column-gap: 1mm;
     margin-top: 1mm;
     margin-bottom: 0;
 }
